Fixed <select> background issue on Firefox on Linux.

--- a/public_html/templates/media/css/style.css
+++ b/public_html/templates/media/css/style.css
@@ -169,6 +169,7 @@
 
 .input, .select {
 	border: 1px solid #d9d6d5;
+	background: #fff;
 	padding: .5em .6em;
 }
 
